fixed rsvp confirmation message

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <input type="hidden" name="_subject" value="Subject for your mail like new message" />
     <input type="text" name="_gotcha" style="display:none" />
 </form>
-<span id="contactformsent">Thank you for your message</span></p>
+<span id="contactformsent">Thank you for your sending your RSVP.  We cannot wait to see you at the wedding!</span></p>
 
 <script>
 $(document).ready(function($) {
