add more photos

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             
               <article id="rsvp">
   <h1>RSVP</h1>
-  <p><form id="contactform" method="post" action="https://formspree.io/labargeintraining@gmail.com">
+  <p><img class="" style='width:100%; border-radius: 6px;' src="/images/personal.jpg" aria-hidden="true">
+<form id="contactform" method="post" action="https://formspree.io/labargeintraining@gmail.com">
     <div class="field">
         <input type="text" name="name" id="name" placeholder="Name of Attendees (First & Last)"/>
     </div>
@@ -89,7 +90,7 @@ $(document).ready(function($) {
             
               <article id="program_and_menu">
   <h1>Dinner Menu</h1>
-  <p><img height="100%" width="100%" src="/images/menu.jpg" alt="menu"></p>
+  <p><img style='margin-top: 25px;' height="100%" width="100%" src="/images/menu.jpg" alt="menu"></p>
 
 </article>
 
